--- a/06FILTER/src/main/webapp/WEB-INF/web.xml
+++ b/06FILTER/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,32 @@
 		<url-pattern>/main.do</url-pattern>
 
 	</servlet-mapping>
+	
+	
+	<servlet>
+
+		<servlet-name>Join</servlet-name>
+		<servlet-class>Servlet.Join</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Join</servlet-name>
+		<url-pattern>/join.do</url-pattern>
+
+	</servlet-mapping>
+	
+	
+	<servlet>
+
+		<servlet-name>Login</servlet-name>
+		<servlet-class>Servlet.Login</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login.do</url-pattern>
+
+	</servlet-mapping>
 	<!-- 필터ㅏ -->
 	<!-- <filter> <filter-name>Index</filter-name> <filter-class>Filter.C01Filter_Test</filter-class> 
 		</filter> <filter-mapping> <filter-name>Index</filter-name> <url-pattern>/index.do</url-pattern> 
